Cycles Point Density Texture object space wrong mapping for scale #46301

Closed
opened 2015-09-28 11:04:43 +02:00 by Gottfried Hofmann · 12 comments

System Information
Operating system and graphics card

Ubuntu 15.04 Geforece GTX 580

Blender Version
Broken: 2.76rc2

Short description of error
Using object space for point density results in wrong scale, see attached image (the cube was scaled in edit mode and has scale 1.0 but dimensions 10.0. pd.bug.scale.png

Using world space yields the correct result.

Exact steps for others to reproduce the error
Open attached .blend, render or turn on rendered view in viewport.

**System Information** Operating system and graphics card Ubuntu 15.04 Geforece GTX 580 **Blender Version** Broken: 2.76rc2 **Short description of error** Using object space for point density results in wrong scale, see attached image (the cube was scaled in edit mode and has scale 1.0 but dimensions 10.0. ![pd.bug.scale.png](https://archive.blender.org/developer/F240399/pd.bug.scale.png) Using world space yields the correct result. **Exact steps for others to reproduce the error** Open attached .blend, render or turn on rendered view in viewport.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

Added subscriber: @Sergey

Added subscriber: @Sergey

I would be happy to solve the issue, but i don't really see attached .blend file.

I would be happy to solve the issue, but i don't really see attached .blend file.

pd.object.coords.bug.blend

Sorry for that, try the above one.

[pd.object.coords.bug.blend](https://archive.blender.org/developer/F240480/pd.object.coords.bug.blend) Sorry for that, try the above one.

Added subscriber: @zeauro

Added subscriber: @zeauro

I confirm that same problem is visible for object vertices.
PD_WS_OS.blend

It seems that Worldspace is limited to a volume of 2X2X2 BU and Objectspace is just increasing this result to mesh bounding box.

I confirm that same problem is visible for object vertices. [PD_WS_OS.blend](https://archive.blender.org/developer/F240497/PD_WS_OS.blend) It seems that Worldspace is limited to a volume of 2X2X2 BU and Objectspace is just increasing this result to mesh bounding box.
Sergey Sharybin self-assigned this 2015-09-28 18:05:34 +02:00

@GottfriedHofmann, your issue should be now fixed in 4c09f47.

@zeauro, this is a bit pf limitation of how Cycles samples density of an object -- it uses texture space to get boundaries within which sampling should happen. Will check if this could become more reliable.

@GottfriedHofmann, your issue should be now fixed in 4c09f47. @zeauro, this is a bit pf limitation of how Cycles samples density of an object -- it uses texture space to get boundaries within which sampling should happen. Will check if this could become more reliable.

The issue indeed got fixed by 4c09f47

The issue indeed got fixed by 4c09f47

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

;)

;)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46301
No description provided.