Cycles: Fix wrong particles min/max calculation for point density

Solves wrong object mapping reported in T46301.